# LumaCut

./: .clang-format  .clangd  .gitmodules  CMakeLists.txt  README.md  frame0.ppm
.zed/: debug.json  settings.json  tasks.json
assets/videos/: lovely_complex.mkv
libraries/std/: CMakeLists.txt
libraries/std/include/std/: allocator_interface.h  allocators.h  ints.h  std.h
libraries/std/include/std/allocators/: allocator.h  temp_allocator.h
src/: main.c
